--- a/To Do List/style.css
+++ b/To Do List/style.css
@@ -145,3 +145,14 @@ footer{
     color: whitesmoke;
     
 }
+::-webkit-scrollbar{
+  width: 10px;
+}
+::-webkit-scrollbar-track{
+  border: 7px solid white;
+  box-shadow:  inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
+}
+::-webkit-scrollbar-thumb{
+ background-color: lightslategray;
+  border-radius: 40px;
+}
