--- a/To Do List/main.css
+++ b/To Do List/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
 *{
   margin: 0;
   padding: 0;
@@ -138,10 +139,10 @@ footer{
   width: 80%;
   margin: 0 auto;
   padding-left: 18%;
-  font-family: 'MedievalSharp', cursive;
+  font-family:'Graduate', sans-serif;
 }
 .heading{
-    font-family: 'Graduate', cursive;
+    font-family:'Bonheur Royale', cursive;
     color: whitesmoke;
     
 }
