--- a/Age Calculator/style.css
+++ b/Age Calculator/style.css
@@ -16,6 +16,7 @@ body{
     left: 50%;
     top: 50%;
     padding: 50px 30px;
+    -webkit-box-reflect: below 4px linear-gradient(transparent 30%, rgba(0,0,0,0.35));
 }
 .container *{
     font-family: "Poppins",sans-serif;
