--- a/Analog Clock/Glassmorphism Clock/style.css
+++ b/Analog Clock/Glassmorphism Clock/style.css
@@ -18,6 +18,7 @@ body{
     border-radius: 50%;
     border: 2px solid rgba(255,255,255,0.1);
     box-shadow: 10px 10px 35px rgba(0,0,0,0.25);
+    -webkit-box-reflect: below 4px linear-gradient(transparent 65%, rgba(0,0,0,0.35));
 }
 img{
     opacity: 0.6;
