--- a/Live Word Counter Project/style.css
+++ b/Live Word Counter Project/style.css
@@ -13,12 +13,15 @@
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+    
   }
   .container {
     background-color: #ffffff;
     padding: 50px 30px 80px 30px;
     border-radius: 8px;
     box-shadow: 0 30px 50px rgba(30, 21, 49, 0.3);
+    
+    -webkit-box-reflect: below 4px linear-gradient(transparent 30%, rgba(0,0,0,0.35));
   }
   textarea {
     width: 100%;
