--- a/Random Password Generator/style.css
+++ b/Random Password Generator/style.css
@@ -25,6 +25,10 @@ body{
     left: 50%;
     border-radius: 8px;
     box-shadow: 0 15px 20px rgba(0,0,0,0.15);
+    transform: translate(-50%,-50%);
+    top: 30%;
+    left: 50%;
+    -webkit-box-reflect: below 4px linear-gradient(transparent 30%, rgba(0,0,0,0.35));
 }
 #output{
     background-color: transparent;
