--- a/StopWatch/style.css
+++ b/StopWatch/style.css
@@ -15,6 +15,11 @@
     left: 50%;
     padding: 60px 0;
     border-radius: 10px;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top: 30%;
+    left: 50%;
+    -webkit-box-reflect: below 4px linear-gradient(transparent 30%, rgba(0,0,0,0.35));
 }
 .timerDisplay{
     position: relative;
