--- a/Clock Project/main.css
+++ b/Clock Project/main.css
@@ -27,10 +27,12 @@ body{
     background-image: linear-gradient(45deg, #7b4397, #dc2430);
     border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
     animation: bgblob 4s infinite 0.5s;
+    -webkit-box-reflect: below 4px linear-gradient(transparent 30%, rgba(0,0,0,0.35));
 }
 
 .clock{
     font-size: 4.5em;
+    
 }
 
 .date{
@@ -57,4 +59,56 @@ body{
     100%{
         border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
     }
+}
+.set-alarm {
+    /* background-color: #498AFB; */
+    background: linear-gradient(45deg, #7b4397, #dc2430);
+    color: white;
+
+}
+.set-alarm:hover{
+    /* transition: 1.1s; */
+    transform: translateY(-10px);
+    background-color: var(--white-shade-1);
+    color: var(--theme-color-1);
+    transition: .6s;
+    border-radius: 20px;
+}
+.stop-alarm {
+    background: linear-gradient(45deg, #7b4397, #dc2430);
+    color: white;
+
+}
+.stop-alarm:hover{
+    transform: translateY(-10px);
+    background-color: var(--white-shade-1);
+    color: var(--theme-color-1);
+    transition: .6s;;
+    transition: 1.1s;
+    border-radius: 20px;
+}
+.controls{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1.3rem;
+
+}
+.button{
+/* font-weight: bold; */
+    border-radius: 5px;
+    border: none;
+    color: white;
+    padding: 4px 8px;
+    margin-left: 4px;
+    font-size: 20px;
+    cursor: pointer;
+
+
+}
+input{
+    margin: 1.3rem;
+    font-family: 'Graduate', sans-serif;
+    font-weight: lighter;
+    font-size: auto;
 }
