--- a/Music Player/style.css
+++ b/Music Player/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 body{
-    background-color: antiquewhite;
+    background-color: black;
 }
 
 *{
@@ -48,6 +48,7 @@ nav ul li{
    border-radius: 12px;
    padding: 34px;
    background-image: url('bg.jpg');
+   background-size: cover;
 }
 
 .bottom{
@@ -120,9 +121,14 @@ nav ul li{
       background-color: red;
     }
   }
-   -webkit-range-thumb{
-    background: linear-gradient(230deg, #4f67, #45e);
-    border-radius: 5px;
-    width: 50%;
-    height: 100%
+  ::-webkit-scrollbar{
+    width: 10px;
+}
+::-webkit-scrollbar-track{
+    border: 7px solid black;
+    box-shadow:  inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
+}
+::-webkit-scrollbar-thumb{
+    background: white;
+    border-radius: 50px;
 }
